--- a/my-teleport-script/html/index.html
+++ b/my-teleport-script/html/index.html
@@ -19,13 +19,16 @@
             </div>
             <button id="teleportSavedButton">Teleport to Saved Location</button>
             <button id="closeButton">Close</button>
+            <p id="Copyright">©lazpal</p>
         </div>
     </div>
     <div id="confirmation" class="hidden">
         <p>Are you sure you want to teleport?</p>
         <button id="confirmTeleportButton">Yes</button>
         <button id="cancelTeleportButton">No</button>
+        <p id="Copyright">©lazpal</p>
     </div>
     <script src="script.js"></script>
+    ©lazpal
 </body>
 </html>
